Bug 1656335 - Improve wasm gating on ARM. r=jseward

Generalizes wasm::HasSupport() on 32-bit ARM so that we check whether
the atomic operations are available in all cases, not just when
running on the simulator.  This was a dumb bug, but an old one.
Effectively this means we get wasm only with ARMv7, which we've been
assuming anyway.  Now we gate it properly.

Changes a whitebox test case that explicitly sets the ARM hw
capabilities to set capabilities that will pass the new test even on
non-simulator builds, and handles the run-time error that results when
command line switches select a compiler that has stronger requirements
than that general requirement, leaving an empty set of available
compilers.  (The baseline compiler requires IDIV support.)

Renames the test case appropriately.

Differential Revision: https://phabricator.services.mozilla.com/D85547