js/src/jit/arm/Simulator-arm.h
@@ -197,8 +197,6 @@ class Simulator {
   Simulator();
   ~Simulator();
 
-  static bool supportsAtomics() { return HasLDSTREXBHD(); }
-
   // The currently executing Simulator instance. Potentially there can be one
   // for each native thread.
   static Simulator* Current();
