js/src/jit/mips64/Simulator-mips64.h
@@ -215,8 +215,6 @@ class Simulator {
   Simulator();
   ~Simulator();
 
-  static bool supportsAtomics() { return true; }
-
   // The currently executing Simulator instance. Potentially there can be one
   // for each native thread.
   static Simulator* Current();
